--- a/love/main.html
+++ b/love/main.html
@@ -22,7 +22,7 @@
                         <input
                             id="loginInput"
                             type="text"
-                            placeholder="Подсказка: дата нашего знакомства"
+                            placeholder="Дата нашего знакомства"
                             required
                         >
                     </label>
@@ -33,7 +33,7 @@
                             <input
                                 id="passwordInput"
                                 type="password"
-                                placeholder="Подсказка: недавний статус в спортзале, через дефис"
+                                placeholder="Недавний статус в спортзале, через дефис"
                                 required
                             >
                             <button
