--- a/love/main.html
+++ b/love/main.html
@@ -66,6 +66,7 @@
                     <p class="open-hint">Нажми на конверт — он откроется ✨</p>
 
                     <div class="envelope" id="envelope" role="button" tabindex="0" aria-label="Открыть конверт">
+                        <div class="envelope-heart" aria-hidden="true"></div>
                         <div class="envelope-back"></div>
                         <div class="envelope-paper" id="envelopePaper">
                             <span>Нажми, чтобы прочитать письмо 💌</span>
