фулл сайт готовый

--- a/love/main.html
+++ b/love/main.html
@@ -84,19 +84,26 @@
             <button class="close-letter" id="closeLetter" aria-label="Закрыть письмо">×</button>
             <h3>Моей любимой 💌</h3>
             <p>
-                Спасибо тебе за каждую улыбку, за тепло твоих рук, за вдохновение,
-                которое ты даришь каждый день. С тобой даже обычные моменты становятся
-                волшебными.
+                Иногда ловлю себя на простой мысли: день может быть тяжёлым, люди - шумными, мысли - уставшими. А потом ты пишешь что-то совсем обычное. «Ты где?» или «Ты поел?»
+                И всё будто становится тише. Ничего не исчезает, но уже не давит так сильно.
             </p>
             <p>
-                Я люблю тебя за твоё большое сердце, за твою нежность,
-                за твою силу и за то, как рядом с тобой хочется быть лучше.
+                Ты для меня даже не просто «любовь». Ты — место, в которое хочется возвращаться.
+                К тебе можно прийти любым: уставшим, растрёпанным, неидеальным — и ничего не объяснять. Ты не пытаешься что-то срочно исправить, ты просто рядом. И этого хватает.
             </p>
             <p>
-                Пусть у нас впереди будет ещё очень много уютных вечеров,
-                путешествий, объятий и маленьких счастливых «навсегда».
+                Я люблю в тебе нежность. Но ещё больше — твой характер. То, как ты умеешь оставаться мягкой и при этом не терять себя. 
+                Как находишь силы улыбнуться там, где можно было бы обидеться. Как держишься — и всё равно остаёшься тёплой.
             </p>
-            <p class="signature">Люблю тебя безмерно ❤️</p>
+            <p>
+                Мне не хочется обещать что-то громкое и красивое. Хочется простого и настоящего: 
+                Больше тихих вечеров, где нам хорошо даже в молчании,
+                Больше дорог, по которым мы идём рядом, чуть ближе друг к другу,
+                Больше обычных дней, которые становятся особенными только потому, что ты в них есть.
+            </p>
+            <p class="signature">Я люблю тебя.
+                Спокойно, глубоко, по-взрослому. И иногда так сильно, что самому от этого смешно.❤️
+            </p>
         </div>
     </section>
 
