--- a/love/main.html
+++ b/love/main.html
@@ -82,27 +82,34 @@
     <section class="letter-overlay hidden" id="letterOverlay" aria-modal="true" role="dialog">
         <div class="letter-paper-full">
             <button class="close-letter" id="closeLetter" aria-label="Закрыть письмо">×</button>
-            <h3>Моей любимой 💌</h3>
+            <h3>Привет, принцесса 💌</h3>
             <p>
-                Иногда ловлю себя на простой мысли: день может быть тяжёлым, люди - шумными, мысли - уставшими. А потом ты пишешь что-то совсем обычное. «Ты где?» или «Ты поел?»
-                И всё будто становится тише. Ничего не исчезает, но уже не давит так сильно.
+                Надеюсь, это обращение не вызывает у тебя лишних триггеров и не возвращает туда, куда не хочется возвращаться.
             </p>
             <p>
-                Ты для меня даже не просто «любовь». Ты — место, в которое хочется возвращаться.
-                К тебе можно прийти любым: уставшим, растрёпанным, неидеальным — и ничего не объяснять. Ты не пытаешься что-то срочно исправить, ты просто рядом. И этого хватает.
+                Если ты читаешь эти строки, значит мои бессонные ночи, проведённые за созданием этой валентинки, были не зря 😁
             </p>
             <p>
-                Я люблю в тебе нежность. Но ещё больше — твой характер. То, как ты умеешь оставаться мягкой и при этом не терять себя. 
-                Как находишь силы улыбнуться там, где можно было бы обидеться. Как держишься — и всё равно остаёшься тёплой.
+                Почти год прошёл с того момента. Почти год я не могу назвать тебя своим полноценным партнёром. 
+                За это время многое изменилось, и, наверное, поэтому эту валентинку не стоит воспринимать как признание в любви в классическом смысле. 
+                Хотя, если быть честным до конца, мои чувства никуда не исчезли. Чего, вероятно, нельзя сказать о твоих.
             </p>
             <p>
-                Мне не хочется обещать что-то громкое и красивое. Хочется простого и настоящего: 
-                Больше тихих вечеров, где нам хорошо даже в молчании,
-                Больше дорог, по которым мы идём рядом, чуть ближе друг к другу,
-                Больше обычных дней, которые становятся особенными только потому, что ты в них есть.
+                Невозможно не заметить, как ты изменилась. Словно расправила крылья, стала свободнее, смелее. Поездки, планы, развитие, новые цели — всё это тебе идёт. 
+                Говорят, после расставания особенно видно, кому отношения были по-настоящему важны: один идёт дальше и растёт, другой остаётся в прежней точке. 
+                Я не буду расставлять ярлыки. Скажу лишь, что искренне рад видеть, как ты становишься счастливее.
+            </p>
+            <p>
+                Да, возможно, наше общение по-прежнему не идеально и временами приносит тебе дискомфорт. 
+                Но, как мне кажется, мы нашли баланс, который позволяет нам оставаться в жизни друг друга без лишнего напряжения. И это уже немало.
+            </p>
+            <p>
+                На последок хотел бы поделиться мудростью: представь, что ты по щелчку пальца могла бы оказаться, где пожелаешь. 
+                Спорим, что ты до сих пор думаешь, что ты не в том месте. Но если сильно зацикливаться на том, где бы ты хотела быть, то упустишь возможность жить здесь и сейчас. 
+                Перестань волноваться о том, что не можешь контролировать. ПРОСТО ЖИВИ!
             </p>
             <p class="signature">Я люблю тебя.
-                Спокойно, глубоко, по-взрослому. И иногда так сильно, что самому от этого смешно.❤️
+                С праздником ❤️
             </p>
         </div>
     </section>
