--- a/love/main.html
+++ b/love/main.html
@@ -1,24 +1,24 @@
-<!DOCTYPE html>␊
-<html lang="ru">␊
-<head>␊
-    <meta charset="UTF-8">␊
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">␊
-    <title>Регистрация любви</title>␊
-    <link rel="preconnect" href="https://fonts.googleapis.com">␊
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>␊
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;700&family=Marck+Script&display=swap" rel="stylesheet">␊
-    <link rel="stylesheet" href="style.css">␊
-</head>␊
-<body>␊
-    <div class="love-rain" id="loveRain" aria-hidden="true"></div>␊
-␊
-    <main class="app">␊
-        <section class="screen login-screen" id="loginScreen">␊
-            <div class="sparkles"></div>␊
-            <div class="login-card glass">␊
-                <h1>💘 Регистрация любви</h1>␊
-                <p class="subtitle">Только для самой прекрасной девушки на свете.</p>␊
-␊
+<!DOCTYPE html>
+<html lang="ru">
+<head> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Регистрация любви</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;700&family=Marck+Script&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="love-rain" id="loveRain" aria-hidden="true"></div> 
+
+    <main class="app"> 
+        <section class="screen login-screen" id="loginScreen"> 
+            <div class="sparkles"></div> 
+            <div class="login-card glass"> 
+                <h1>💘 Регистрация любви</h1> 
+                <p class="subtitle">Только для самой прекрасной девушки на свете.</p> 
+
                 <form id="loveLoginForm" class="love-form" autocomplete="off">
                     <label>
                         Логин
@@ -60,67 +60,67 @@
             </div>
         </section>
 
-        <section class="screen valentine-screen hidden" id="valentineScreen">␊
-            <div class="proposal-card glass" id="proposalCard">␊
-                <h2>Ты примешь мою любовь?</h2>␊
-␊
-                <div class="actions" id="actionsRow">␊
-                    <button class="btn btn-yes" id="yesBtn">Да 💖</button>␊
-                    <button class="btn btn-no" id="noBtn">Нет 🙈</button>␊
-                </div>␊
-␊
-                <div class="envelope-scene hidden" id="envelopeScene">␊
-                    <p class="open-hint">Нажми на конверт — он откроется ✨</p>␊
-␊
-                    <div class="envelope" id="envelope" role="button" tabindex="0" aria-label="Открыть конверт">␊
-                        <div class="envelope-heart" aria-hidden="true"></div>␊
-                        <div class="envelope-back"></div>␊
-                        <div class="envelope-paper" id="envelopePaper">␊
-                            <span>Нажми, чтобы прочитать письмо 💌</span>␊
-                        </div>␊
-                        <div class="envelope-front"></div>␊
-                        <div class="envelope-flap"></div>␊
-                    </div>␊
-                </div>␊
-            </div>␊
-        </section>␊
-    </main>␊
-␊
-    <section class="letter-overlay hidden" id="letterOverlay" aria-modal="true" role="dialog">␊
-        <div class="letter-paper-full">␊
-            <button class="close-letter" id="closeLetter" aria-label="Закрыть письмо">×</button>␊
-            <h3>Привет, принцесса 💌</h3>␊
-            <p>␊
-                Надеюсь, это обращение не вызывает у тебя лишних триггеров и не возвращает туда, куда не хочется возвращаться.␊
-            </p>␊
-            <p>␊
-                Если ты читаешь эти строки, значит мои бессонные ночи, проведённые за созданием этой валентинки, были не зря 😁␊
-            </p>␊
-            <p>␊
-                Почти год прошёл с того момента. Почти год я не могу назвать тебя своим полноценным партнёром. ␊
-                За это время многое изменилось, и, наверное, поэтому эту валентинку не стоит воспринимать как признание в любви в классическом смысле. ␊
-                Хотя, если быть честным до конца, мои чувства никуда не исчезли. Чего, вероятно, нельзя сказать о твоих.␊
-            </p>␊
-            <p>␊
-                Невозможно не заметить, как ты изменилась. Словно расправила крылья, стала свободнее, смелее. Поездки, планы, развитие, новые цели — всё это тебе идёт. ␊
-                Говорят, после расставания особенно видно, кому отношения были по-настоящему важны: один идёт дальше и растёт, другой остаётся в прежней точке. ␊
-                Я не буду расставлять ярлыки. Скажу лишь, что искренне рад видеть, как ты становишься счастливее.␊
-            </p>␊
-            <p>␊
-                Да, возможно, наше общение по-прежнему не идеально и временами приносит тебе дискомфорт. ␊
-                Но, как мне кажется, мы нашли баланс, который позволяет нам оставаться в жизни друг друга без лишнего напряжения. И это уже немало.␊
-            </p>␊
-            <p>␊
-                На последок хотел бы поделиться мудростью: представь, что ты по щелчку пальца могла бы оказаться, где пожелаешь. ␊
-                Спорим, что ты до сих пор думаешь, что ты не в том месте. Но если сильно зацикливаться на том, где бы ты хотела быть, то упустишь возможность жить здесь и сейчас. ␊
-                Перестань волноваться о том, что не можешь контролировать. ПРОСТО ЖИВИ!␊
-            </p>␊
-            <p class="signature">Я люблю тебя.␊
-                С праздником ❤️␊
-            </p>␊
-        </div>␊
-    </section>␊
-␊
-    <script src="script.js"></script>␊
-</body>␊
+        <section class="screen valentine-screen hidden" id="valentineScreen"> 
+            <div class="proposal-card glass" id="proposalCard"> 
+                <h2>Ты примешь мою любовь?</h2> 
+ 
+                <div class="actions" id="actionsRow"> 
+                    <button class="btn btn-yes" id="yesBtn">Да 💖</button> 
+                    <button class="btn btn-no" id="noBtn">Нет 🙈</button> 
+                </div> 
+ 
+                <div class="envelope-scene hidden" id="envelopeScene"> 
+                    <p class="open-hint">Нажми на конверт — он откроется ✨</p> 
+ 
+                    <div class="envelope" id="envelope" role="button" tabindex="0" aria-label="Открыть конверт"> 
+                        <div class="envelope-heart" aria-hidden="true"></div> 
+                        <div class="envelope-back"></div> 
+                        <div class="envelope-paper" id="envelopePaper"> 
+                            <span>Нажми, чтобы прочитать письмо 💌</span> 
+                        </div> 
+                        <div class="envelope-front"></div> 
+                        <div class="envelope-flap"></div> 
+                    </div> 
+                </div> 
+            </div> 
+        </section> 
+    </main> 
+ 
+    <section class="letter-overlay hidden" id="letterOverlay" aria-modal="true" role="dialog"> 
+        <div class="letter-paper-full"> 
+            <button class="close-letter" id="closeLetter" aria-label="Закрыть письмо">×</button> 
+            <h3>Привет, принцесса 💌</h3> 
+            <p> 
+                Надеюсь, это обращение не вызывает у тебя лишних триггеров и не возвращает туда, куда не хочется возвращаться. 
+            </p> 
+            <p> 
+                Если ты читаешь эти строки, значит мои бессонные ночи, проведённые за созданием этой валентинки, были не зря 😁 
+            </p> 
+            <p> 
+                Почти год прошёл с того момента. Почти год я не могу назвать тебя своим полноценным партнёром.  
+                За это время многое изменилось, и, наверное, поэтому эту валентинку не стоит воспринимать как признание в любви в классическом смысле.  
+                Хотя, если быть честным до конца, мои чувства никуда не исчезли. Чего, вероятно, нельзя сказать о твоих. 
+            </p> 
+            <p> 
+                Невозможно не заметить, как ты изменилась. Словно расправила крылья, стала свободнее, смелее. Поездки, планы, развитие, новые цели — всё это тебе идёт.  
+                Говорят, после расставания особенно видно, кому отношения были по-настоящему важны: один идёт дальше и растёт, другой остаётся в прежней точке.  
+                Я не буду расставлять ярлыки. Скажу лишь, что искренне рад видеть, как ты становишься счастливее. 
+            </p> 
+            <p> 
+                Да, возможно, наше общение по-прежнему не идеально и временами приносит тебе дискомфорт.  
+                Но, как мне кажется, мы нашли баланс, который позволяет нам оставаться в жизни друг друга без лишнего напряжения. И это уже немало. 
+            </p> 
+            <p> 
+                На последок хотел бы поделиться мудростью: представь, что ты по щелчку пальца могла бы оказаться, где пожелаешь.  
+                Спорим, что ты до сих пор думаешь, что ты не в том месте. Но если сильно зацикливаться на том, где бы ты хотела быть, то упустишь возможность жить здесь и сейчас.  
+                Перестань волноваться о том, что не можешь контролировать. ПРОСТО ЖИВИ! 
+            </p> 
+            <p class="signature">Я люблю тебя. 
+                С праздником ❤️ 
+            </p> 
+        </div> 
+    </section> 
+ 
+    <script src="script.js"></script> 
+</body> 
 </html>
