--- a/love/main.html
+++ b/love/main.html
@@ -25,6 +25,7 @@
                         <input
                             id="loginInput"
                             type="text"
+                            inputmode="decimal"
                             placeholder="Дата нашего знакомства"
                             required
                         >
