--- a/love/main.html
+++ b/love/main.html
@@ -26,6 +26,7 @@
                             id="loginInput"
                             type="text"
                             inputmode="decimal"
+                            lang="ru"
                             placeholder="Дата нашего знакомства"
                             required
                         >
@@ -38,6 +39,8 @@
                             <input
                                 id="passwordInput"
                                 type="password"
+                                inputmode="text"
+                                lang="ru"
                                 placeholder="Недавний статус в спортзале, через дефис"
                                 data-focus-hint="Недавний статус в спортзале, через дефис"
                                 required
