--- a/love/main.html
+++ b/love/main.html
@@ -80,7 +80,7 @@
                         <h3>💌 Тёплое сообщение</h3>
                         <p class="widget-hint">Когда захочется улыбнуться — нажми кнопку.</p>
                         <button class="btn btn-soft" id="warmMessageBtn" type="button">Показать тёплые слова</button>
-                        <p class="warm-message-text" id="warmMessageText" aria-live="polite">Я уже приготовил 20 сообщений только для тебя ✨</p>
+                        <p class="warm-message-text" id="warmMessageText" aria-live="polite">Я подготовил для тебя теплые послания ✨</p>
                     </article>
 
                     <article class="love-widget game-widget">
