--- a/love/main.html
+++ b/love/main.html
@@ -27,9 +27,11 @@
                         <input
                             id="loginInput"
                             type="text"
-                            inputmode="decimal"
+                            inputmode="numeric"
                             lang="ru"
-                            placeholder="Дата нашего знакомства"
+                            placeholder="01.12.2020"
+                            maxlength="10"
+                            autocomplete="off"
                             required
                         >
                         <span class="field-tooltip" role="note">Дата нашего знакомства</span>
@@ -75,17 +77,12 @@
                     <button class="btn btn-no" id="noBtn">Нет 🙈</button> 
                 </div> 
 
-                <div class="extra-love-tools" aria-label="Романтические активности">
-                    <article class="love-widget warm-widget">
-                        <h3>💌 Тёплое сообщение</h3>
-                        <p class="widget-hint">Когда захочется улыбнуться — нажми кнопку.</p>
-                        <button class="btn btn-soft" id="warmMessageBtn" type="button">Показать тёплые слова</button>
-                        <p class="warm-message-text" id="warmMessageText" aria-live="polite">Я подготовил для тебя теплые послания ✨</p>
-                    </article>
+                <div class="envelope-scene hidden" id="envelopeScene"> 
+                    <p class="open-hint" id="envelopeHint">Нажми на конверт — он откроется ✨</p>
 
-                    <article class="love-widget game-widget">
+                    <article class="love-widget game-widget hidden" id="miniGameGate">
                         <h3>🎮 Мини-игра: поймай сердечки</h3>
-                        <p class="widget-hint">Лови сердечки за 20 секунд — сколько успеешь?</p>
+                        <p class="widget-hint">Чтобы открыть конверт, нужно набрать минимум 20 очков.</p>
                         <div class="game-stats">
                             <span>Очки: <strong id="gameScore">0</strong></span>
                             <span>Время: <strong id="gameTime">20</strong>с</span>
@@ -93,12 +90,9 @@
                         </div>
                         <button class="btn btn-soft" id="startMiniGameBtn" type="button">Старт</button>
                         <div class="heart-game-area" id="heartGameArea" aria-label="Игровая зона"></div>
-                        <p class="mini-game-status" id="miniGameStatus" aria-live="polite">Нажми «Старт», и сердечки полетят вниз 💞</p>
+                        <p class="mini-game-status" id="miniGameStatus" aria-live="polite">Нажми на конверт, чтобы начать испытание 💞</p>
                     </article>
-                </div>
- 
-                <div class="envelope-scene hidden" id="envelopeScene"> 
-                    <p class="open-hint">Нажми на конверт — он откроется ✨</p> 
+                
  
                     <div class="envelope" id="envelope" role="button" tabindex="0" aria-label="Открыть конверт"> 
                         <div class="envelope-heart" aria-hidden="true"></div> 
