--- a/love/main.html
+++ b/love/main.html
@@ -119,33 +119,29 @@
             <button class="close-letter" id="closeLetter" aria-label="Закрыть письмо">×</button> 
             <h3>Привет, принцесса 💌</h3> 
             <p> 
-                Надеюсь, это обращение не вызывает у тебя лишних триггеров и не возвращает туда, куда не хочется возвращаться. 
+                Надеюсь, это обращение вызывает у тебя только лёгкую улыбку и ничего больше. 
             </p> 
             <p> 
-                Если ты читаешь эти строки, значит мои бессонные ночи, проведённые за созданием этой валентинки, были не зря 😁 
+                Если ты читаешь эти строки, значит все мои ночные попытки сделать что-то тёплое и особенное были не зря 😁 
             </p> 
             <p> 
-                Почти год прошёл с того момента. Почти год я не могу назвать тебя своим полноценным партнёром.  
-                За это время многое изменилось, и, наверное, поэтому эту валентинку не стоит воспринимать как признание в любви в классическом смысле.  
-                Хотя, если быть честным до конца, мои чувства никуда не исчезли. Чего, вероятно, нельзя сказать о твоих. 
+                Почти год прошёл с того момента, как всё изменилось. За это время многое стало другим, и, наверное, поэтому эту валентинку не стоит воспринимать как громкое признание в любви. 
+                Скорее, как тихое напоминание о том, что ты для меня по-прежнему важный человек. Мои чувства со временем стали спокойнее, глубже и честнее. 
             </p> 
             <p> 
-                Невозможно не заметить, как ты изменилась. Словно расправила крылья, стала свободнее, смелее. Поездки, планы, развитие, новые цели — всё это тебе идёт.  
-                Говорят, после расставания особенно видно, кому отношения были по-настоящему важны: один идёт дальше и растёт, другой остаётся в прежней точке.  
-                Я не буду расставлять ярлыки. Скажу лишь, что искренне рад видеть, как ты становишься счастливее. 
+                Я не могу не замечать, как ты изменилась. Будто стала свободнее, увереннее, живее. Поездки, планы, новые цели - всё это тебе очень идёт. 
+                И мне искренне приятно видеть, как ты растёшь и находишь себя в этом мире. 
             </p> 
             <p> 
-                Да, возможно, наше общение по-прежнему не идеально и временами приносит тебе дискомфорт.  
-                Но, как мне кажется, мы нашли баланс, который позволяет нам оставаться в жизни друг друга без лишнего напряжения. И это уже немало. 
+                Да, наше общение не всегда простое, и, возможно, временами в нём есть неловкость. 
+                Но мне кажется, мы смогли найти тот самый баланс, который позволяет нам оставаться в жизни друг друга без лишнего напряжения. И это на самом деле ценно. 
             </p> 
             <p> 
-                На последок хотел бы поделиться мудростью: представь, что ты по щелчку пальца могла бы оказаться, где пожелаешь.  
-                Спорим, что ты до сих пор думаешь, что ты не в том месте. Но если сильно зацикливаться на том, где бы ты хотела быть, то упустишь возможность жить здесь и сейчас.  
+                Напоследок хотел бы поделиться мудростью: представь, что ты по щелчку пальца могла бы оказаться, где пожелаешь. 
+                Спорим, что ты до сих пор думаешь, что ты не в том месте. Но если сильно зацикливаться на том, где бы ты хотела быть, то упустишь возможность жить здесь и сейчас. 
                 Перестань волноваться о том, что не можешь контролировать. ПРОСТО ЖИВИ! 
             </p> 
-            <p class="signature">Я люблю тебя. 
-                С праздником ❤️ 
-            </p> 
+            <p class="signature">С праздником ❤️</p> 
         </div> 
     </section> 
  
